# particleGPT

./: .gitignore  .gitmodules  README.md  analysis.ipynb  analysis.py  analysis_current.py  analysis_v2.py  analyze_samples.py  atlas.json  build_root.sh  configurator.py  control_panel.ipynb  data_backup_tool.py  data_cleaner.py  data_cleaner_5a.py  data_manager.py  decoding_prof_v4.profile  decoding_prof_v5.profile  dictionary.py  distribution_normalizer.py  generate_distributions.py  generate_mega_table.py  generate_table.py  log_config.json  main.ipynb  mass_renaming_datasets.py  mega_table.csv  metadatas.md  model.py  model_bak.py  model_fastattention.py  model_fixes1_v1.py  model_fixes1_v1_polish_pass.py  model_up1.py  model_up2.py  model_up3.py  model_up4.py  model_upgrade3_temp_for_job.py  output.txt  pLogging.py  (+50 more)
.codex/: config.toml
analysis/: analyzer.py  dataset.py  metrics.py  plotting.py  tables.py
analysis_notebooks/: analysis.ipynb  analysis_1.ipynb  analysis_10M_12_reduced_bin_widths.ipynb  analysis_2.ipynb  analysis_common.py  analysis_energy_conservation.ipynb  analysis_exp10.ipynb  analysis_exp11_logging_invertal_tests.ipynb  analysis_exp11_low_epoch_reproductions.ipynb  analysis_exp11_lrschedules_2.ipynb  analysis_exp11a.ipynb  analysis_exp11b.ipynb  analysis_exp11c.ipynb  analysis_exp11d.ipynb  analysis_exp4.ipynb  analysis_exp4_model_comparer.ipynb  analysis_exp5.ipynb  analysis_exp5_model_comparer.ipynb  (+22 more)
pTokenizer/: CMakeLists.txt  dictionary.cpp  dictionary.h  filter.cpp  main.cpp  main.h  setup.py  tokenizer.cpp  untokenizer.cpp  utils.h
(+1026 files in other folders)
